<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coursifybackground"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/courseImagePreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/course_image"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:focusable="true" />

    </FrameLayout>

    <EditText
        android:id="@+id/courseNameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_border"
        android:hint="@string/course_name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/courseDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/course_description"
        android:inputType="textMultiLine"
        android:background="@drawable/rounded_border"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:lines="4"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/addImageButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/course_image"
        android:textColor="@color/coursifycolor" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/deploy"
        android:textColor="@color/coursifycolor" />

</LinearLayout>
